# git-ignores

./: Makefile  README.md  git-ignores.1  go.mod  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: go.yml
cmd/git-ignores/: main.go  main_test.go
git_ignores/: console.py
