[tool.poetry]
name = "git-ignores"
version = "0.1.0"
description = ".gitignore generator"
authors = ["Josh Burns <joshyburnss@gmail.com>"]
readme = "README.md"
packages = [{include = "git_ignores"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
requests = "^2.28.1"

[tool.poetry.scripts]
git-ignores = 'git_ignores.console:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
